--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Understanding Time, Space, and Complexity</h1>
+    
+    <p>Time complexity is a computational concept that describes the amount of time it takes to run an algorithm as a function of the length of the input. Efficient algorithms are designed to minimize time complexity, ensuring faster performance even with large inputs.</p>
+    
+    <p><b>Space Complexity</b> refers to the amount of memory an algorithm needs to run as a function of the length of the input. Space Complexity is often expressed in Big O notation, such as O(n), which indicates how the memory usage grows with the input size.</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
